--- a/source/package.json
+++ b/source/package.json
@@ -25,6 +25,7 @@
     "element-ui": "^2.10.1",
     "file-loader": "^4.0.0",
     "html-webpack-plugin": "^3.2.0",
+    "jquery": "^3.4.1",
     "mini-css-extract-plugin": "^0.7.0",
     "node-sass": "^4.12.0",
     "postcss-loader": "^3.0.0",
