--- a/source/package.json
+++ b/source/package.json
@@ -38,6 +38,7 @@
     "vue-router": "^3.0.7",
     "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.6.10",
+    "vue-video-player": "^5.0.2",
     "vuex": "^3.1.1",
     "webpack": "^4.35.3",
     "webpack-cli": "^3.3.5"
